Testing git commit command

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+/*https://dev.to/dcodeyt/creating-beautiful-html-tables-with-css-428l*/
 table {
     border-collapse: collapse;
     margin: 25px 0;
