--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,6 @@ body {
 table {
     border-collapse: collapse;
     margin: auto;
-    font-size: 1em;
     font-family: sans-serif;
     min-width: 250px;
 }
@@ -37,4 +36,38 @@ tbody tr:nth-of-type(even) {
 
 a {
     color: lightblue
+}
+
+.tab {
+    overflow: hidden;
+    background-color: black;
+}
+  
+/* Style the buttons that are used to open the tab content */
+.tab button {
+    background-color: black;
+    color: white;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+  
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+  
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: blue;
+}
+  
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border-top: none;
+    font-size: 0.9em;
 }
