--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,6 +57,7 @@ a {
 /* Change background color of buttons on hover */
 .tab button:hover {
     background-color: #ddd;
+    color: black;
 }
   
 /* Create an active/current tablink class */
@@ -71,3 +72,53 @@ a {
     border-top: none;
     font-size: 0.9em;
 }
+
+ /* Dropdown Button */
+ .dropbtn {
+    background-color: #ddd;
+    color: blue;
+    padding: 6px 12px;
+    font-size: 2em;
+    border: none;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content div {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content div:hover {background-color: white;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: blue; color: white}
+
+  .dropdown-content button {
+    outline: none;
+    border: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+  }
