--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,7 +83,7 @@ a {
     padding: 6px 12px;
     font-size: 2em;
     border: none;
-    min-width: 300px;
+    min-width: 350px;
   }
   
   /* The container <div> - needed to position the dropdown content */
@@ -127,4 +127,5 @@ a {
     padding: 14px 16px;
     transition: 0.3s;
     min-width: 300px;
+    font-size: larger;
   }
