--- a/styles/styles.css
+++ b/styles/styles.css
@@ -120,7 +120,7 @@ a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
-    display: block;
+    display: flex;
     min-width: 300px;
   }
   
@@ -140,12 +140,10 @@ a {
     padding: 14px 16px;
     transition: 0.3s;
     min-width: 300px;
-    font-size: larger;
+    font-size: medium;
   }
 
-.hour_summary {
-    display: none;
-}
+.hour_summary {display: none;}
 
 #hourly_total_summary table {
     border-collapse: collapse;
