--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,8 @@ body {
     padding: 10px;
     text-align: center;
     font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 img {
@@ -16,7 +18,6 @@ img {
 table {
     border-collapse: collapse;
     margin: auto;
-    font-family: sans-serif;
     font-size: larger;
     min-width: 75%;
 }
